8327114: Attach in Linux may have wrong behaviour when pid == ns_pid (Kubernetes debug container)